--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,9 +9,30 @@ on:
   workflow_dispatch:
 
 jobs:
-  run-script:
+  First-script:
+    name: first run
     runs-on: ubuntu-latest
 
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'  # or any version you need
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+
+    - name: Run script
+      run: python First.py
+
+  second-script:
+    name: second run
+    runs-on: ubuntu-latest
+    needs: first run
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
