--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
   second-script:
     name: second run
     runs-on: ubuntu-latest
-    needs: first run
+    needs: First-script
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
