--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,50 +1,34 @@
-name: Run Python Script
+name: Run Python Add Script
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
   workflow_dispatch:
+    inputs:
+      num1:
+        description: 'First number'
+        required: true
+        default: '5'
+      num2:
+        description: 'Second number'
+        required: true
+        default: '7'
 
 jobs:
-  First-script:
-    name: first run
+  run-add:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'  # or any version you need
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
+      - name: Run second.py
+        id: run-script
+        run: |
+          result=$(python add.py ${{ github.event.inputs.num1 }} ${{ github.event.inputs.num2 }} | awk '{print $2}')
+          echo "result=$result" >> $GITHUB_OUTPUT
 
-    - name: Run script
-      run: python First.py
-
-  second-script:
-    name: second run
-    runs-on: ubuntu-latest
-    needs: First-script
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'  # or any version you need
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-
-    - name: Run script
-      run: python second.py
+      - name: Show result in summary
+        run: echo "### The sum is ${{ steps.run-script.outputs.result }}" >> $GITHUB_STEP_SUMMARY
